<!--
  ~ Copyright (©) 2016 Jeff Harris <jefftharris@gmail.com>
  ~ All rights reserved. Use of the code is allowed under the
  ~ Artistic License 2.0 terms, as specified in the LICENSE file
  ~ distributed with this code, or available from
  ~ http://www.opensource.org/licenses/artistic-license-2.0.php
  -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context="com.jefftharris.passwdsafe.PasswdSafeOpenFileFragment">

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical">

        <TextView android:id="@+id/title"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginBottom="8dp"
                  android:text="@string/new_file"
                  android:textAppearance="?android:attr/textAppearanceLarge"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/file_name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/file_name">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/file_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="fill_horizontal"
                android:inputType="textNoSuggestions"
                android:maxLines="1"
                android:scrollHorizontally="true">
                <requestFocus/>
            </android.support.design.widget.TextInputEditText>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:passwordToggleEnabled="false">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="fill_horizontal"
                android:inputType="textPassword"
                android:maxLines="1"
                android:scrollHorizontally="true"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/password_confirm_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm"
            app:passwordToggleEnabled="false">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/password_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="fill_horizontal"
                android:imeOptions="actionGo"
                android:inputType="textPassword"
                android:maxLines="1"
                android:scrollHorizontally="true"/>
        </android.support.design.widget.TextInputLayout>

        <ProgressBar android:id="@+id/progress"
                     style="?android:attr/progressBarStyleHorizontal"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
                     android:indeterminate="true"/>

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal">

            <Button android:id="@+id/cancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@android:string/cancel"/>

            <Button android:id="@+id/ok"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@android:string/ok"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>
