...
    <string name="choose_type">Choose Type</string>
    <string name="clear">Clear</string>
    <string name="clear_all_saved_passwords">Clear all saved passwords</string>
    <string name="clear_clipboard_on_close">Clear clipboard on close</string>
    <string name="clear_password_notifications">Clear password notifications</string>
    <string name="clear_recent">Clear Recent</string>
    <string name="close_file">Close File</string>
    <string name="close_file_screen_off">Close file on screen off</string>
    <string name="confirm">Confirm</string>
    <string name="cannot_delete_record">Cannot delete record - %1$s</string>
    <string name="content_file">Content File</string>
    <string name="continue_str">Continue</string>
    <string name="continue_p">Continue?</string>
...
        doesn\'t respond with a rising tone, try moving the key around.  A bit
        of trial-and-error is needed to find the correct location.  The button
        on the YubiKey itself does not need to be pressed.\n
        - Once the key is found, it will be used to authenticate with your
        password.  The file will open automatically.
    </string>
    <string name="file_operations">File Operations…</string>
    <string name="file_password_encoding">File password encoding</string>
    <string name="files">Files</string>
    <string name="find_similar">Find Similar</string>
    <string name="fingerprint_not_recognized">Fingerprint not recognized</string>
    <string name="generate">Generate</string>
    <string name="generate_password">Generate Password</string>
...
    <string name="press_yubikey">Press YubiKey</string>
    <string name="previous">Previous</string>
    <string name="protect_all">Protect All Records</string>
    <string name="protect_group">Protect Group Records</string>
    <string name="protected_record">Protected</string>
    <string name="protected_record_header">PROTECTED RECORD</string>
    <string name="psafe3_ext">.psafe3</string>
    <string name="query_label">Search: %1$s</string>
    <string name="recent_files">Recent Files</string>
    <string name="record">Record</string>
    <string name="records">Records</string>
    <string name="record_has_references">Record has references</string>
    <string name="record_not_found">Record not found</string>
    <string name="record_policy">Record Policy</string>
    <string name="record_sort_field">Record sort field</string>
    <string name="record_sort_order">Record sort order</string>
    <string name="record_type">Record type</string>
...
    <string name="shortcut_record">Shortcut record</string>
    <string name="shortcut_to_same_record">Shortcut to the same record</string>
    <string name="show_backup_files">Show backup files</string>
    <string name="show_password">Show Password</string>
    <string name="show_passwords">Show Passwords</string>
    <string name="similar_to">Similar to %1$s</string>
    <string name="sort">Sort</string>
    <string name="sort_ascending">Sort ascending</string>
    <string name="symbols_used_by_default">Symbols used by default in a password policy: %1$s</string>
    <string name="sync">Sync</string>
    <string name="sync_account_deleted">Sync account deleted.  Use the menu to choose another option.</string>
    <string name="times_header">TIMES</string>
    <string name="title">Title</string>
...
